[gd_scene load_steps=4 format=3 uid="uid://bydxyn7stprhg"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_c7avf"]
[ext_resource type="FontVariation" uid="uid://rr6u4j4imq5q" path="res://assets/font/FlipDigitFontVariationTrimmed.tres" id="2_07t5a"]

[sub_resource type="LabelSettings" id="LabelSettings_5xnfr"]
font = ExtResource("2_07t5a")
font_size = 200

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_c7avf")

[node name="TitleText" type="Label" parent="."]
layout_mode = 0
offset_left = 394.0
offset_top = 120.0
offset_right = 1498.0
offset_bottom = 559.0
text = "Airwave Riders"
label_settings = SubResource("LabelSettings_5xnfr")
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 886.0
offset_top = 592.0
offset_right = 1010.0
offset_bottom = 759.0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "play"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "quit"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
